# gamma

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opengl_project  package-lock.json  package.json  reload.js
lib/glad/: glad.c  glad.h
src/: Camera.cpp  Camera.h  Gamma.cpp  Gamma.h  Geometry.cpp  Geometry.h  Joystick.cpp  Joystick.h  Light.cpp  Light.h  NeuralNet.cpp  Object.h  Spline.cpp  Spline.h  ThreadPool.cpp  ThreadPool.h  a.out  chapter1.cpp  chapter2.cpp  main.cpp  main2.cpp  utils.cpp  utils.h  water.cpp
src/shaders/: grid.frag  grid.vert  shader.frag  shader.vert  shader_2.frag  shader_2.vert  shader_2_light.frag  water.frag
