cmake_minimum_required(VERSION 3.0.0)
project(opengl_project VERSION 0.1.0)
cmake_policy(SET CMP0072 NEW)
find_package(OpenGL REQUIRED COMPONENTS OpenGL)
add_executable(opengl_project src/main2.cpp src/lib/glad/glad.h src/lib/glad/glad.c src/Gamma.cpp src/Gamma.h src/lib/stb_image/stb_image.h src/Camera.cpp  src/Spline.cpp src/Joystick.cpp src/utils.cpp src/Geometry.cpp)
target_link_libraries(opengl_project glfw OpenGL::OpenGL)